sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:5: error: ')' expected but $XMLSTART$< found.
  while (i <n-1){
           ^AlgBubbleSort1:13: error: illegal start of simple expression
} 
^